# rixtretto-server

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  sample-data.json
assets/: sample-data.json
assets/sample-data/: coffee-associations.csv  green-coffee-details.json  green-coffee.csv  roasted-coffee.csv  roaster-details.json  roasters.csv
src/alembic/: env.py
src/alembic/versions/: 2025_12_26_1437-762c128d99d2_create_tables_origins_green_coffees.py  2026_02_02_0655-e3ff81cf0bba_refactor_origin_to_country_and_regions.py  2026_03_09_1814-b673e336c240_create_columns_normalized_names.py  2026_03_25_0808-15496868c175_refactor_coffee_columns_to_tags.py
src/api/: main.py  types.py
src/api/resolvers/: __init__.py  coffee_component.py  country.py  green_coffee.py  mutation.py  origin.py  query.py  roasted_coffee.py  roaster.py
src/db/: README.md  green-coffee-details.schema.json  models.py  utilities.py
src/db/queries/: __init__.py  base.py  component_associations.py  countries.py  green_coffees.py  origins.py  roasted_coffees.py
src/schema/: GreenCoffee.graphql  RoastedCoffee.graphql  Roaster.graphql  schema.graphql
src/schema/normalized_types/: roaster.py
src/server/: __init__.py  main.py  router.py
tests/: conftest.py  test_read_queries.py
tests/test_read_integration/: __init__.py  test_coffee_component.py  test_country.py  test_green_coffee.py  test_origin.py  test_roasted_coffee.py  test_roaster.py
tests/test_write_integration/: conftest.py  test_green_coffee.py  test_roasted_coffee.py  test_roaster.py
(+3 files in other folders)
